# MyChat

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.MD  README.md  package-lock.json
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci-cd.yml  release.yml
app/core/: main.py
app/db/: init_db.py
backend/: .env  .flake8  Dockerfile  bandit-report.json  pyproject.toml  pytest.ini  requirements.txt
backend/app/: README.md  main.py
backend/app/api/: README.md  __init__.py  chat.py  user.py
backend/app/core/: README.md  config.py  main.py
backend/app/db/: README.md  init_db.py
backend/app/llms/: README.md  base.py  chatglm.py  llama.py  qwen.py
backend/app/models/: README.md  user.py
backend/app/services/: README.md  __init__.py  rag_service.py  user_service.py
backend/app/tasks/: README.md
backend/app/utils/: README.md
backend/tests/: README.md  test_user.py
deploy/: README.md
deploy/k8s/: README.md  backend-deployment.yaml  frontend-deployment.yaml  milvus-deployment.yaml
doc/: CHANGELOG.md  FAQ.md
doc/大模型学习记录/: 大模型学习-day1.ipynb  大模型学习-day2.ipynb  大模型学习-day3.ipynb
frontend/: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: chat.js  user.js
frontend/src/components/: ChatInput.vue  ChatMessage.vue  ChatWindow.vue  ReferenceList.vue  UserRegister.vue
scripts/: README.md  deploy.sh  dev-workflow.sh  pre-commit-check.sh  quick-check.sh  sync-branches.sh
scripts/cheatsheet/: dev_startup.md  postgres_docker.md
